Celcius & Fahrenheit options

--- a/index.html
+++ b/index.html
@@ -51,6 +51,14 @@
           </div>
         </fieldset>
 
+        <div id="unitBlock" class="unit-selector hidden">
+          <label for="unitSelect">Unité de température :</label>
+          <select id="unitSelect">
+            <option value="C" selected>°C</option>
+            <option value="F">°F</option>
+          </select>
+        </div>
+
         <button id="validationButton">Valider</button>
         <p id="error" class="error-message"></p>
       </section>
