--- a/index.html
+++ b/index.html
@@ -66,6 +66,15 @@
       <section id="weatherInformation" class="card hidden"></section>
     </div>
 
+    <div id="themeToggle">
+      <span class="icon-sun">☀︎</span>
+      <label class="switch">
+        <input type="checkbox" id="themeCheckbox" />
+        <span class="slider round"></span>
+      </label>
+      <span class="icon-moon">☾</span>
+    </div>
+
     <script src="js/app.js"></script>
     <script src="js/weatherCard.js"></script>
   </body>
