fixe code postal

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="villeBlock" class="hidden">
           <label for="communeSelect">Ville</label>
           <select id="communeSelect">
-            <option disabled selected>Choisissez une ville</option>
+            <option disabled selected value="">Choisissez une ville</option>
           </select>
         </div>
 
