--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <section id="weatherInformation" class="card hidden"></section>
       
       <section id="todoSection" class="card">
-        <h2>📝 Mes Tâches</h2>
+        <h2>📝 Mes Tâches de caca</h2>
         <div class="todo-input-container">
           <input type="text" id="todoInput" placeholder="Ajouter une nouvelle tâche..." maxlength="100">
           <button id="addTodoButton">Ajouter</button>
